Revert "Remove susy third party grid library"
This reverts commit 4454cc5537df38cfe27a0c38dbfff6c6cac2e9ca.

--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "select2": "~4.0.0",
     "sticky": "latest",
     "store.js": "latest",
+    "susy": "~2.2.6",
     "svgeezy": "latest",
     "Vague.js": "0.0.4",
     "vide": "~0.3.1",
