--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "grunt-scss-lint": "0.3.8",
     "grunt-text-replace": "^0.4.0",
     "grunt-w3c-html-validation": "^0.1.8",
-    "jquery": "1.x",
     "jsdom": "^9.12.0",
     "jsdom-global": "^2.1.1",
     "matchdep": "^1.0.1",
@@ -107,14 +106,19 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "historyjs": "^1.8.0-b2",
+    "jquery": "1.x",
+    "jquery-sticky": "^1.0.4",
     "jquery-ui": "^1.12.1",
     "jquery.countdown": "^1.2.8",
     "jstree": "^3.3.3",
     "lodash": "^4.6.1",
     "moment": "^2.15.2",
     "normalize.css": "^7.0.0",
+    "nwmatcher": "^1.4.2",
     "pikaday": "^1.6.1",
+    "respond.js": "^1.4.2",
     "select2": "^4.0.4",
+    "selectivizr": "^1.0.3",
     "spectrum-colorpicker": "^1.8.0",
     "susy": "^2.2.6",
     "svgeezy": "git+https://github.com/benhowdle89/svgeezy.git"
