--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "vagrant reload && grunt",
     "coverage": "mochify --transform [ babelify ] --plugin [ mochify-istanbul --exclude '**/+(tests|node_modules|libs)/**/*' --report lcov --dir ./coverage --instrumenter babel-istanbul] --reporter spec --recursive ./tests/js/web/index ./tests/js/web/*Test.js",
     "test": "npm run web-test && npm run js-ext-test && npm run js-macro-test",
-    "web-test": "mochify --reporter spec --transform [ babelify ] --recursive ./tests/js/web/index ./tests/js/web/*Test.js",
+    "web-test": "mochify --reporter spec --transform [ babelify ] ./tests/js/web/index './tests/js/web/**/*Test.js'",
     "js-ext-test": "mocha --reporter spec ./tests/js/twig/Extension/*Test.js",
     "js-macro-test": "mocha --reporter spec ./tests/js/twig/Macro/*Test.js"
   },
