--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "svgeezy": "latest",
     "Vague.js": "0.0.4",
     "vide": "~0.3.1",
-    "spectrum": "^1.8.0"
+    "spectrum": "^1.8.0",
+    "jt.timepicker": "jquery-timepicker-jt#^1.11.12"
   },
   "devDependencies": {
     "livereload-js": "livereload/livereload-js",
