--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "datatables.net-select": "^1.1.2",
     "datatables.net-select-dt": "^1.1.2",
     "font-awesome": "^4.7.0",
-    "jquery": "1.x",
+    "jquery": "3.2.1",
     "jquery-placeholder": "^2.3.1",
     "jquery-sticky": "^1.0.4",
     "jquery-ui": "github:mikedevelops/jquery-ui#core-widgets",
