Remove countdown.js, fix js tests

--- a/package.json
+++ b/package.json
@@ -84,11 +84,10 @@
     "datatables.net-select": "^1.1.2",
     "datatables.net-select-dt": "^1.1.2",
     "font-awesome": "^4.7.0",
-    "jquery": "3.2.1",
+    "jquery": "1.x",
     "jquery-placeholder": "^2.3.1",
     "jquery-sticky": "^1.0.4",
     "jquery-ui": "github:mikedevelops/jquery-ui#core-widgets",
-    "jquery.countdown": "^1.2.8",
     "jstree": "^3.3.3",
     "lodash": "^4.6.1",
     "moment": "^2.15.2",
