--- a/package.json
+++ b/package.json
@@ -107,7 +107,6 @@
   "dependencies": {
     "jstree": "^3.3.3",
     "lodash": "^4.6.1",
-    "moment": "^2.15.2",
-    "password-strength-meter": "^1.2.1"
+    "moment": "^2.15.2"
   }
 }
