--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "browserify-istanbul": "^2.0.0",
     "browserify-shim": "^3.8.9",
     "chai": "^1.9.2",
+    "chai-dom": "^1.6.0",
     "chai-hiff": "^1.0.0",
     "datatables.net": "^1.10.11",
     "datatables.net-buttons": "^1.1.2",
@@ -35,6 +36,7 @@
     "datatables.net-responsive-dt": "^2.0.0",
     "datatables.net-select": "^1.1.2",
     "datatables.net-select-dt": "^1.1.2",
+    "dom4": "^1.8.5",
     "grunt": "^0.4.5",
     "grunt-asciify": "^0.2.2",
     "grunt-autoprefixer": "^3.0.4",
