--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "scripts": {
     "start": "vagrant reload && grunt",
     "coverage": "mochify --transform [ babelify ] --plugin [ mochify-istanbul --exclude '**/+(tests|node_modules|libs)/**/*' --report lcov --dir ./coverage --instrumenter babel-istanbul] --reporter spec --recursive ./tests/js/web/index ./tests/js/web/*Test.js",
-    "test": "npm run web-test && npm run js-ext-test",
-    "web-test": "mochify --reporter spec --transform [ babelify ] ./tests/js/web/index './tests/js/web/**/*Test.js'",
-    "js-ext-test": "mocha --reporter spec ./tests/js/twig/Extension/*Test.js"
+    "test": "npm run web-test",
+    "web-test": "mochify --reporter spec --transform [ babelify ] ./tests/js/web/index './tests/js/web/**/*Test.js'"
   },
   "devDependencies": {
     "aliasify": "^1.9.0",
