--- a/libs/store.js/package.json
+++ b/libs/store.js/package.json
@@ -22,7 +22,7 @@
     "ngrok": "^0.2.2",
     "node-localstorage": "^0.6.0",
     "request": "^2.67.0",
-    "uglify-js": "v1.3.4"
+    "uglify-js": "2.6.0"
   },
   "engines": {
     "browser": "*",
