--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "devDependencies": {
     "aliasify": "^1.9.0",
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.26.0",
     "babel-istanbul": "^0.12.2",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-register": "^6.24.1",
     "babelify": "^7.3.0",
     "browser-sync": "^2.17.3",
@@ -101,6 +102,7 @@
     }
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "jstree": "^3.3.3",
     "lodash": "^4.6.1",
     "moment": "^2.15.2"
