--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,9 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
 
 addons:
-  chrome: stable
+  apt:
+    packages:
+      - google-chrome-stable
 
 deploy:
   provider: releases
