Render docs home link in local mode

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,6 +8,10 @@ kramdown:
 # Permalinks
 permalink:          /:title/
 
+links:
+  - title: Home
+    url: /
+
 # Setup
 title:               Pulsar
 tagline:             The open-source design system for the Jadu Continuum platform
