--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,11 +8,14 @@ kramdown:
 # Permalinks
 permalink:          /:title/
 
+links:
+  - title: Home
+    url: /
+
 # Setup
 title:               Pulsar
 tagline:             The open-source design system for the Jadu Continuum platform
 url:                 http://jadu.net
-paginate:            1
 baseurl:             "/pulsar"
 include:             ["_pages"]
 
