Remove vagrant configs in favour of docker
Pulsar can now be started by the `npm start` command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/jadu/pulsar.git"
   },
   "scripts": {
-    "start": "vagrant reload && grunt",
+    "start": "docker-compose up -d && grunt",
     "coverage": "mochify --transform [ babelify ] --plugin [ mochify-istanbul --exclude '**/+(tests|node_modules|libs)/**/*' --report lcov --dir ./coverage --instrumenter babel-istanbul] --reporter spec ./tests/harness/common './tests/js/web/**/*Test.js'",
     "test": "npm run test:headless",
     "build:tests": "grunt javascript:tests",
