--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - composer install --prefer-dist --no-interaction
 
 script:
-  - phpunit
+  - ./vendor/bin/phpunit
   - grunt build
   - npm test
   - npm run coverage
