--- a/.hound.yml
+++ b/.hound.yml
@@ -2,6 +2,7 @@ scss:
   config_file: .scss-lint.yml
   exclude:
     - "libs/**/*"
+    - "js/libs/**/*"
     - "node_modules/**/*"
     - "vendor/**/*"
 
