--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "build:tests:watch": "grunt javascript:tests:watch",
     "test:headless": "mochify --reporter spec --transform [ babelify ] ./tests/harness/common './tests/js/web/**/*Test.js'",
     "test:browser": "npm run build:tests && open ./tests/js/web/index.html",
-    "test:browser:watch": "npm run build:tests:watch"
+    "test:browser:watch": "npm run build:tests:watch",
+    "cypress:open": "cypress open"
   },
   "devDependencies": {
     "aliasify": "^1.9.0",
+    "axe-core": "^3.4.0",
     "babel-core": "^6.26.0",
     "babel-istanbul": "^0.12.2",
     "babel-polyfill": "^6.26.0",
@@ -31,6 +33,8 @@
     "chai": "^1.9.2",
     "chai-dom": "^1.6.0",
     "chai-hiff": "^1.0.0",
+    "cypress": "^3.7.0",
+    "cypress-axe": "^0.5.1",
     "grunt": "^1.0.3",
     "grunt-asciify": "^0.2.2",
     "grunt-autoprefixer": "^3.0.4",
