Attempt to add Cypress to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,23 @@ cache:
 php:
   - 5.5
 
+node_js:
+  - 10
+  
+addons:
+  apt:
+    packages:
+      # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
+      - libgconf-2-4
+
+cache:
+  # Caches $HOME/.npm when npm ci is default script command
+  # Caches node_modules in all other cases
+  npm: true
+  directories:
+    # we also need to cache folder with Cypress binary
+    - ~/.cache
+
 before_install:
   - npm install -g npm@5.5.1
 
@@ -22,12 +39,14 @@ before_script:
 install:
   - composer self-update
   - composer install --prefer-dist --no-interaction
+  - npm ci
 
 script:
   - phpunit
   - grunt build
   - npm test
   - npm run coverage
+  - $(npm bin)/cypress run --record
 
 after_success:
   - grunt deploy
