--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
   - curl -sSL "https://get.docker.com/gpg" | sudo -E apt-key add -
   - echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update
-  - sudo apt-get -o Dpkg::Options::="--force-confdef" Dpkg::Options::="--force-confold" --assume-yes install docker-engine
+  - sudo apt-get -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" --assume-yes install docker-engine
   - docker version
   - sudo pip install docker-compose
   - docker-compose version
