--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ install:
   - composer install --prefer-dist --no-interaction
   - curl -sSL "https://get.docker.com/gpg" | sudo -E apt-key add -
   - echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" | sudo tee -a /etc/apt/sources.list
+  - sudo apt-key update
   - sudo apt-get update
   - sudo apt-get -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" --assume-yes install docker-engine
   - docker version
