--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jadu-pulsar",
-  "version": "9.0.3",
+  "version": "9.0.3-symfony",
   "repository": {
     "type": "git",
     "url": "https://github.com/jadu/pulsar.git"
