--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jadu/pulsar",
     "description": "The User Experience and Interface framework for the Jadu Continuum Platform",
-    "version": "9.0.3-symfony",
+    "version": "9.0.3-p1",
     "license": "MIT",
     "autoload": {
         "psr-0": {
