--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "select2": "github:jadu/selectWoo#jadu-1.1.2",
     "spectrum-colorpicker": "^1.8.0",
     "timepicker": "^1.13.0",
+    "tippy.js": "^5.2.1",
     "vide": "^0.5.1"
   }
 }
