Lock phpunit to v7, this requires php 7.1 locally

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "twig/twig": "^1.21"
     },
     "require-dev": {
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": "^7.0",
         "symfony/yaml": "*"
     }
 }
