--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "pulsar-date-picker": "^1.0.0",
     "select2": "github:jadu/selectWoo#jadu-1.1.2",
     "spectrum-colorpicker": "^1.8.0",
-    "timepicker": "^1.13.9",
+    "timepicker": "1.13.2",
     "tippy.js": "^5.2.1",
     "vide": "^0.5.1"
   }
