--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jadu/pulsar",
     "description": "The User Experience and Interface framework for the Jadu Continuum Platform",
-    "version": "10.3.1",
+    "version": "11.0.0-beta.1",
     "license": "MIT",
     "autoload": {
         "psr-0": {
