--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_script:
 install:
   - composer self-update
   - composer install --prefer-dist --no-interaction
+  - if [[ $TRAVIS_PHP_VERSION > '7.1' ]]; then wget -O ~/.phpenv/versions/$(phpenv version-name)/bin/phpunit https://phar.phpunit.de/phpunit-7.phar; fi
+  - if [[ $TRAVIS_PHP_VERSION > '7.1' ]]; then chmod 755 ~/.phpenv/versions/$(phpenv version-name)/bin/phpunit; fi
 
 script:
   - phpunit
