Add new sanitise filter on all raw instances

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     },
     "require": {
-        "twig/twig": "^1.21"
+        "twig/twig": "^1.21",
+        "vanilla/htmlawed": "^1.1"
     },
     "require-dev": {
         "symfony/yaml": "*",
