--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chai": "^1.9.2",
     "chai-dom": "^1.6.0",
     "chai-hiff": "^1.0.0",
+    "fibers": "^5.0.0",
     "grunt": "^1.0.3",
     "grunt-asciify": "^0.2.2",
     "grunt-autoprefixer": "^3.0.4",
@@ -74,6 +75,7 @@
   },
   "dependencies": {
     "chartist": "^0.11.4",
+    "dart-sass": "^1.25.0",
     "datatables.net": "^1.10.22",
     "datatables.net-buttons": "^1.6.1",
     "datatables.net-buttons-dt": "^1.6.1",
