--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 7.3.26
+  - 7.3
 
 before_install:
   - npm install -g npm@5.5.1
@@ -24,6 +24,7 @@ install:
   - composer install --prefer-dist --no-interaction
   - if [[ $TRAVIS_PHP_VERSION > '7.1' ]]; then wget -O ~/.phpenv/versions/$(phpenv version-name)/bin/phpunit https://phar.phpunit.de/phpunit-7.phar; fi
   - if [[ $TRAVIS_PHP_VERSION > '7.1' ]]; then chmod 755 ~/.phpenv/versions/$(phpenv version-name)/bin/phpunit; fi
+  - XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-text 
 
 script:
   - phpunit
