--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
   - npm install
   - mkdir -p dist/js
   - gem update --system && gem install scss_lint
+  - composer install
 
 install:
   - composer self-update
