Try removing phpunit from composer.json to see if Travis installs it

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "twig/twig": "^1.21"
     },
     "require-dev": {
-        "symfony/yaml": "*",
-        "phpunit/phpunit": "^9"
+        "symfony/yaml": "*"
     }
 }
