--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "twig/twig": "^1.21"
     },
     "require-dev": {
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+        "phpunit/phpunit": "^9"
     }
 }
