--- a/docs/package.json
+++ b/docs/package.json
@@ -18,7 +18,8 @@
     "clsx": "^1.1.1",
     "docusaurus-plugin-sass": "^0.1.11",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "yarn": "^1.22.10"
   },
   "browserslist": {
     "production": [
