--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "docusaurus-plugin-sass": "^0.1.11",
+    "jquery": "^3.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "yarn": "^1.22.10"
