Add offset underline and thicker hover effect on links

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -121,6 +121,9 @@ linters:
 
   PropertySpelling:
     enabled: true
+    extra_properties:
+      - text-underline-offset
+      - text-decoration-thickness
 
   PropertyUnits:
     enabled: false
