--- a/docs/package.json
+++ b/docs/package.json
@@ -16,10 +16,11 @@
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
-    "docusaurus-plugin-sass": "^0.1.12",
+    "docusaurus-plugin-sass": "^0.1.14",
     "jquery": "^3.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "sass": "^1.32.13",
     "yarn": "^1.22.10"
   },
   "browserslist": {
