--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "datatables.net-select": "^1.3.1",
     "datatables.net-select-dt": "^1.3.1",
     "font-awesome": "4.7.0",
+    "input-length": "^1.0.0",
     "jquery": "^3.4.1",
     "jquery-countdown": "^2.2.0",
     "jquery-placeholder": "^2.3.1",
