Add a GH action for PHP & Composer

--- a/.github/workflows/php-composer.yml
+++ b/.github/workflows/php-composer.yml
@@ -38,8 +38,8 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: PHPUnit tests
+      uses: php-actions/phpunit@v3
+      with:
+        configuration: phpunit.xml.dist
+        memory_limit: 256M
