--- a/package.json
+++ b/package.json
@@ -75,11 +75,12 @@
     "uglifyify": "^3.0.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "chartist": "^0.11.4",
+    "datatables.net": "^1.11.3",
     "datatables.net-buttons": "^1.7.0",
     "datatables.net-buttons-dt": "^1.7.0",
     "datatables.net-dt": "^1.10.24",
-    "datatables.net": "^1.11.3",
     "datatables.net-responsive": "^2.2.7",
     "datatables.net-responsive-dt": "^2.2.6",
     "datatables.net-select": "^1.3.3",
