--- a/docs/package.json
+++ b/docs/package.json
@@ -12,16 +12,16 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "2.0.0-alpha.70",
+    "@docusaurus/core": "2.0.0-beta.9",
+    "@docusaurus/preset-classic": "2.0.0-beta.9",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
-    "docusaurus-plugin-sass": "^0.1.14",
+    "docusaurus-plugin-sass": "^0.1.15",
     "jquery": "^3.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "sass": "^1.32.13",
-    "yarn": "^1.22.10"
+    "yarn": "^1.22.17"
   },
   "browserslist": {
     "production": [
