--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "aliasify": "^1.9.0",
-    "axios": ">=0.21.1",
+    "axios": "^0.26.1",
     "babel-core": "^6.26.0",
     "babel-istanbul": "^0.12.2",
     "babel-polyfill": "^6.26.0",
@@ -28,12 +28,12 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-register": "^6.24.1",
     "babelify": "^7.3.0",
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.27.9",
     "browserify": "10.0.0",
     "browserify-istanbul": "^2.0.0",
     "browserify-shim": "^3.8.9",
     "chai": "^1.9.2",
-    "chai-dom": "^1.9.0",
+    "chai-dom": "^1.11.0",
     "chai-hiff": "^1.0.0",
     "dart-sass": "^1.25.0",
     "grunt": "^1.4.1",
@@ -75,23 +75,23 @@
     "uglifyify": "^3.0.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "chartist": "^0.11.4",
-    "datatables.net": "^1.11.3",
+    "datatables.net": "^1.11.5",
     "datatables.net-buttons": "^1.7.0",
     "datatables.net-buttons-dt": "^1.7.0",
-    "datatables.net-dt": "^1.10.24",
-    "datatables.net-responsive": "^2.2.7",
-    "datatables.net-responsive-dt": "^2.2.6",
-    "datatables.net-select": "^1.3.3",
-    "datatables.net-select-dt": "^1.3.3",
+    "datatables.net-dt": "^1.11.5",
+    "datatables.net-responsive": "^2.2.9",
+    "datatables.net-responsive-dt": "^2.2.9",
+    "datatables.net-select": "^1.3.4",
+    "datatables.net-select-dt": "^1.3.4",
     "input-length": "^1.0.1",
     "jquery": "^3.6.0",
     "jquery-countdown": "^2.2.0",
     "jquery-placeholder": "^2.3.1",
     "jquery-sticky": "^1.0.4",
-    "jquery-ui": "^1.13.0",
-    "jstree": "^3.3.11",
+    "jquery-ui": "^1.13.1",
+    "jstree": "^3.3.12",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
@@ -99,7 +99,7 @@
     "pulsar-date-picker": "^1.0.0",
     "select2": "github:jadu/selectWoo#jadu-1.1.3",
     "spectrum-colorpicker": "^1.8.1",
-    "timepicker": "^1.13.16",
+    "timepicker": "^1.13.18",
     "tippy.js": "^5.2.1",
     "vide": "^0.5.1"
   }
