Remove some docusaurus files

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ pulsar.zip
 /shots
 /fonts
 /fonts/_config.fonts.scss
+/docs/node_modules
+/docs/.docusaurus
 
 /.csscomb.json
 /validation-status.json
