--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
       - uses: redkubes/docusaurus-deploy-action@v1
         with:
           source-folder: docs
