--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,8 +25,8 @@ jobs:
       # Install and build Docusaurus website
       - name: Build Docusaurus website
         run: |
-          cd website
-          npm install 
+          cd docs
+          npm install
           npm run build
       - name: Deploy to GitHub Pages
         if: success()
