--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -25,6 +25,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
