--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "chai": "^3.0",
     "chai-dom": "^1.11.0",
     "chai-hiff": "^1.0.0",
-    "dart-sass": "^1.25.0",
+    "sass": "^1.25.0",
     "grunt": "^1.5.3",
     "grunt-asciify": "^0.2.2",
     "grunt-autoprefixer": "^3.0.4",
