--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -8,6 +8,7 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -26,6 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm install -g npm && npm --version && npm list -g --depth 0
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
