--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -27,5 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.GPR_PRIVATE_READ_TOKEN }}
     - run: npm run build --if-present
     - run: npm test
