--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [15.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -27,6 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm i -g npm@7 --registry=https://registry.npmjs.org
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
