--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -27,7 +27,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm i -g npm@7 --registry=https://registry.npmjs.org
+    - name: install latest npm
+        run: |
+          npm install -g npm &&
+          npm --version &&
+          npm list -g --depth 0
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
