--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -27,8 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: install latest npm
-        run: npm install -g npm && npm --version && npm list -g --depth 0
+    - run: npm install -g npm && npm --version && npm list -g --depth 0
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
