--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -27,7 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Authenticate NPM with the GPR
-    - uses: jgierer12/npm-auth-gpr@v1
+      uses: jgierer12/npm-auth-gpr@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
     - run: npm ci
